@startuml entity-relationship-diagram
!theme plain

entity usuario {
  * idUsuario : NUMERO
  --
  nombre : CARACTER
  rol : CARACTER
  correo : CARACTER
  contraseña : CARACTER
  calle : CARACTER
  numero : CARACTER
  colonia : CARACTER
  ciudad : CARACTER
  estado : CARACTER
  codigoPostal : CARACTER
}

entity carritocabecera {
  * idCarrito : NUMERO
  --
  idUsuario : NUMERO
}

entity carritolinea {
  * idCarrito : NUMERO
  * idProducto : NUMERO
  --
  cantidadProductos : NUMERO
}

entity producto {
  * idProducto : NUMERO
  --
  nombre : CARACTER
  descripcion : CARACTER
  cantidad : NUMERO
  precio : NUMERO
  limite : NUMERO
  idCategoria : NUMERO
  idTalla : NUMERO
  idColor : NUMERO
}

entity talla {
  * idTalla : NUMERO
  --
  nombre : CARACTER
}

entity imagen {
  * idImagen : NUMERO
  --
  nombre : CARACTER
  idProducto : NUMERO
}

entity color {
  * idColor : NUMERO
  --
  nombre : CARACTER
}

entity categoria {
  * idCategoria : NUMERO
  --
  nombre : CARACTER
}

entity pedido {
  * idPedido : NUMERO
  --
  rfc : CARACTER
  regimen : CARACTER
  codigoPostal : CARACTER
  idCarrito : NUMERO
}

entity detalle {
  * idDetalle : NUMERO
  --
  monto : CARACTER
  idPedido : NUMERO
}

entity resenia {
  * idResenia : NUMERO
  --
  resenia : CARACTER
  calificacion : NUMERO
  idProducto : NUMERO
}

' Relaciones
usuario ||--o{ carritocabecera : ""
carritocabecera ||--o{ carritolinea : ""
carritocabecera ||--o{ pedido : ""
carritolinea }o--|| producto : ""
producto }o--|| talla : ""
producto }o--|| color : ""
producto }o--|| categoria : ""
producto ||--o{ imagen : ""
pedido ||--o{ detalle : ""
producto ||--o{ resenia : ""

@enduml